2011-11-24  Roland Levillain  <roland@lrde.epita.fr>

	Work around decorated_image's lack of properties, for the recorder.

	* apps/morphers/recorder.hh
	(trait::image_< decorated_image<I,D> >): Replace with..
	(trait::image_< decorated_image<I, recorder<I> > >): ...this.
	Add a value_storage property.
	(ch_value_< decorated_image< image_<I>, data_< recorder<I> > >, V >):
	New trait, to handle changes of value types in images decorated
	with a recorder.
	* apps/morphers/mask+channel.cc,
	* apps/morphers/mask+recorder.cc,
	* apps/morphers/recorder.cc:
	Simplify these programs thanks to the preceding changes.

2011-11-24  Roland Levillain  <roland@lrde.epita.fr>

	Fix the initialization of mln::decorated_image.

	* mln/tag/init.hh (tag::data_t): New tag type.
	 (tag::data): New tag.
	* mln/core/image/imorph/decorated_image.hh
	(init_(tag::data_t, D&, const decorated_image<I,D>&))
	(init_(tag::data_t, D&, const decorated_image<I,D2>&))
	(init_(tag::image_t, decorated_image<I,D>&, const J&)):
	New functions.

2011-11-18  Roland Levillain  <roland@lrde.epita.fr>

	Simplify some apps/morpher programs using mln::make::box2d.

	* apps/morphers/mask+recorder.cc,
	* apps/morphers/mask+channel.cc:
	Here.

2011-11-18  Roland Levillain  <roland@lrde.epita.fr>

	Refactor apps/morphers.

	* apps/morphers/recorder.cc,
	* apps/morphers/mask+recorder.cc:
	Factor common parts...
	* apps/morphers/recorder.hh: ...here (new file).
	* apps/morphers/Makefile.am
	(recorder_SOURCES, mask_recorder_SOURCES): Add recorder.hh.

2011-11-14  Roland Levillain  <roland@lrde.epita.fr>

	Add examples of morphers.

	* apps/morphers/mask+channel.cc,
	* apps/morphers/recorder.cc,
	* apps/morphers/mask+recorder.cc:
	New.
	* apps/morphers/Makefile.am: New.
	* apps/Makefile.am (SUBDIRS): Add morphers.

2011-10-04  Roland Levillain  <roland@lrde.epita.fr>

	Handle the case of filling an empty border.

	* mln/border/fill.hh (mln::border::impl::fill_size_1): Here.
	Aesthetic changes.